--- a/src/App/Router/routes/Authorization/styles.css
+++ b/src/App/Router/routes/Authorization/styles.css
@@ -1,12 +1,10 @@
-.title {
-    color: var(--primary-title-color);
-    font-size: var(--auth-title-size);
-    padding: 20px 0px;
-    font-weight: bold;
-}
-
-.wrapper {
+.auth-wrapper {
     display: flex;
     flex-direction: column;
     align-items: center;
+    max-width: 20%;
+}
+
+.registration-success {
+    max-width: 50%;
 }
