--- a/src/App/Router/routes/Root/styles.css
+++ b/src/App/Router/routes/Root/styles.css
@@ -1,3 +1,8 @@
 .main {
+    width: 100%;
+    height: 100%;
     background-image: url('/public/iStock-10543947921000.webp');
+    background-size: cover;
+    position: relative;
+    z-index: 100;
 }
