--- a/src/App/components/Form/styles.css
+++ b/src/App/components/Form/styles.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
+    padding: 0 100px;
 }
 
 .field {
@@ -25,7 +26,7 @@
     border-right: 0;
 }
 
-.field:focus, button:focus {
+.field:focus {
     outline: none;
     transform: scale(1.2);
 }
