--- a/src/App/Router/routes/Root/styles.css
+++ b/src/App/Router/routes/Root/styles.css
@@ -9,6 +9,7 @@
     justify-content: flex-start;
     align-items: center;
     flex-direction: column;
+    position: relative;
 }
 
 .main__content {
@@ -17,6 +18,12 @@
     justify-content: space-around;
     padding-top: 100px;
     width: 80%;
+}
+
+.main__button {
+    position: absolute;
+    right: 100px;
+    top: 100px;
 }
 
 .main__text {
