--- a/src/App/Router/routes/Error/styles.css
+++ b/src/App/Router/routes/Error/styles.css
@@ -2,7 +2,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 50%;
     padding: 0;
 }
 
@@ -12,4 +11,10 @@
 
 .error-page__text {
     margin: 10px 0;
+}
+
+@media screen and (max-width: 800px) {
+    .error-page__error {
+        font-size: 25px;
+    }
 }
