--- a/src/App/components/Form/styles.css
+++ b/src/App/components/Form/styles.css
@@ -64,3 +64,10 @@
 .password--true {
     display: none;
 }
+
+@media screen and (max-width: 800px) {
+    .form {
+        width: 130%;
+        padding: 0px;
+    }
+}
